<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Find the Light</string>
    <string name="no_notes">No data available</string>
    <string name="password">Password:</string>
    <string name="login_label">Login</string>
    <string name="login_id">Login Id:</string>

    <string name="btn_schedule">Personal Details</string>
    <string name="btn_map">Visual Assessment</string>
    <string name="btn_sessions">General Assessment</string>
    <string name="btn_starred">Previous Eye Surgery</string>
    <string name="btn_vendors">Eye Examination (Site of Abnormality)</string>
    <string name="btn_announcements">Refraction</string>
    <string name="eye_exam_aetiology">Eye Exam (Aetiology)</string>
    <string name="action_needed">Action Needed</string>
    <string name="prognosis">Prognosis</string>
    <string name="education">Education</string>
    <string name="full_diagnosis">Full Diagnosis</string>
    <string name="pd_name">Name</string>
    <string name="pd_father_name">Father\'s name</string>


</resources>
