<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/settings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
        android:background="@drawable/white_bg">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingBottom="5dip"
        android:background="@drawable/white_bg">

    <FrameLayout

            android:id="@+id/FrameLayout01"
	        android:layout_width="fill_parent"
            android:layout_marginTop="15dip"
            android:layout_height="wrap_content"
	        xmlns:android="http://schemas.android.com/apk/res/android">

	</FrameLayout>


    <RelativeLayout android:layout_width="fill_parent"
    			android:layout_marginTop="8dip"
                android:layout_height="wrap_content"
                 android:background="#00000000"
                android:layout_below="@id/FrameLayout01"
                android:id="@+id/section1">


      <TextView android:id="@+id/l_httpuser"
        	  android:layout_marginTop="10dip"
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:text="@string/login_id"
               android:textColor="#ff000000"
              android:textSize="15px"/>
              
    <EditText android:id="@+id/uName"
              android:layout_width="fill_parent" 
              android:layout_height="30dp"
              android:singleLine="true"
              android:minHeight="40dip"
              android:textSize="15px"
              android:background="@android:drawable/editbox_background"
              android:layout_below="@id/l_httpuser"
              android:text=""/>


         <TextView android:id="@+id/l_httppassword"
              android:layout_marginTop="10dip"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/password"
               android:textColor="#ff000000"
              android:textSize="15px"
              android:layout_below="@id/uName"/>
        <EditText android:id="@+id/pass"
              android:layout_width="fill_parent"
              android:layout_height="30dp"
              android:singleLine="true"
              android:minHeight="40dip"
              android:layout_marginBottom="10dip"
              android:password="true"
              android:textSize="15px"
              android:background="@android:drawable/editbox_background"
              android:layout_below="@id/l_httppassword"
              android:text=""/>


<Button
			android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass"
            android:layout_centerHorizontal="true"
            android:text="@string/login_label"
            android:background="@drawable/button"/>


</RelativeLayout>
</RelativeLayout>

</ScrollView>
